--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -62,7 +62,7 @@ button:focus-visible {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  /* Removed text-align: center to prevent inheritance issues */
 }
 
 @media (prefers-color-scheme: light) {
